<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearEditvaccinatio"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearAppbartop"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyleteal_400">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_11pxh"
                android:layout_marginVertical="@dimen/_11pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowclose"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageClose"
                        android:layout_height="@dimen/_33pxh"
                        android:layout_width="@dimen/_33pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_close"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtVaccinatorTask"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginStart="@dimen/_82pxh"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_weight="0.79"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@string/msg_edit_child_deta"
                        style="@style/txtIntermedium16" tools:text="@string/msg_edit_child_deta"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearItems"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_200">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearDatacard"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <EditText
                    android:background="@drawable/rectangle_bg_gray_100"
                    android:ellipsize="end"
                    android:hint="@string/lbl_chid_details"
                    android:id="@+id/etHeading" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/bluegray_900"
                    style="@style/etSolid" tools:ignore="Autofill"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumntext"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/lbl_child_name"
                        android:id="@+id/textInputLayText"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_13pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_16pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:textColorHint="@color/bluegray_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:ellipsize="end"
                            android:fontFamily="@font/inter"
                            android:id="@+id/etText"
                            android:inputType="text"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@string/lbl_shahzain_ali"
                            android:textColor="@color/bluegray_900"
                            android:textFontWeight="400"
                            android:textSize="@dimen/_14pxh"
                            android:textStyle="normal" tools:text="@string/lbl_shahzain_ali"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/lbl_date_of_birth2"
                        android:id="@+id/textInputLayDate"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_12pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_16pxh"
                        android:paddingTop="@dimen/_13pxv"
                        android:textColorHint="@color/bluegray_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:ellipsize="end"
                            android:fontFamily="@font/inter"
                            android:id="@+id/etDate"
                            android:inputType="text"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@string/lbl_01_04_2019"
                            android:textColor="@color/bluegray_900"
                            android:textFontWeight="400"
                            android:textSize="@dimen/_14pxh"
                            android:textStyle="normal" tools:text="@string/lbl_01_04_2019"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/msg_sina_file_numbe2"
                        android:id="@+id/textInputLayTextOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_13pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_16pxh"
                        android:paddingTop="@dimen/_12pxv"
                        android:textColorHint="@color/bluegray_500" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:ellipsize="end"
                            android:fontFamily="@font/inter"
                            android:id="@+id/etTextOne"
                            android:inputType="number"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@string/lbl_123"
                            android:textColor="@color/bluegray_900"
                            android:textFontWeight="400"
                            android:textSize="@dimen/_14pxh"
                            android:textStyle="normal" tools:text="@string/lbl_123"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtLabelTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_gender"
                        style="@style/txtIntermedium14_3" tools:text="@string/lbl_gender"/>
                    <RadioGroup android:id="@+id/rgRadiogrouptex"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_21pxv"
                        android:layout_width="match_parent" android:orientation="vertical">
                        <RadioButton
                            android:buttonTint="@color/teal_400"
                            android:ellipsize="end"
                            android:fontFamily="@font/inter"
                            android:id="@+id/rbTex"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_16pxh"
                            android:layout_width="wrap_content"
                            android:paddingBottom="@dimen/_1pxv"
                            android:paddingStart="@dimen/_18pxh"
                            android:paddingTop="@dimen/_1pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_male"
                            android:textColor="@color/bluegray_900"
                            android:textFontWeight="400"
                            android:textSize="@dimen/_14pxh"
                            android:textStyle="normal" tools:text="@string/lbl_male"/>
                        <RadioButton
                            android:buttonTint="@color/gray_501"
                            android:ellipsize="end"
                            android:fontFamily="@font/inter"
                            android:id="@+id/rbTextTwo"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_21pxv"
                            android:layout_width="wrap_content"
                            android:paddingBottom="@dimen/_1pxv"
                            android:paddingStart="@dimen/_18pxh"
                            android:paddingTop="@dimen/_1pxv"
                            android:singleLine="true"
                            android:text="@string/lbl_female"
                            android:textColor="@color/bluegray_900"
                            android:textFontWeight="400"
                            android:textSize="@dimen/_14pxh"
                            android:textStyle="normal" tools:text="@string/lbl_female"/>
                    </RadioGroup>
                    <EditText
                        android:background="@drawable/rectangle_bg_white_a700_border_gray_400_radius_4"
                        android:ellipsize="end"
                        android:hint="@string/msg_special_conditi"
                        android:id="@+id/etField"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_30pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_16pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/bluegray_500"
                        style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnSaveChanges"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_40pxv"
                        android:layout_marginBottom="@dimen/_16pxv"
                        android:layout_marginEnd="@dimen/_16pxh"
                        android:layout_marginStart="@dimen/_16pxh"
                        android:layout_marginTop="@dimen/_24pxv"
                        android:layout_width="@dimen/_158pxh"
                        android:paddingBottom="@dimen/_13pxv"
                        android:paddingEnd="@dimen/_24pxh"
                        android:paddingStart="@dimen/_24pxh"
                        android:paddingTop="@dimen/_13pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_save_changes"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded" tools:text="@string/lbl_save_changes"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
